--- a/src/app/profile/[userId]/index.module.scss
+++ b/src/app/profile/[userId]/index.module.scss
@@ -65,6 +65,8 @@
       padding: 20px;
       box-sizing: content-box;
       cursor: pointer;
+      display: flex;
+      justify-content: space-between;
       &:hover{
         background: rgba(0,0,0,.1);
       }
