删除功能以及文章列表操作菜单开发完毕

--- a/src/app/profile/[userId]/index.module.scss
+++ b/src/app/profile/[userId]/index.module.scss
@@ -76,6 +76,10 @@
       .article-date{
         color: #666666;
       }
+      .article-menu{
+        display: flex;
+        align-items: center;
+      }
     }
   }
 }
