--- a/src/components/MdEditor/plugins/SavePlugin/index.module.scss
+++ b/src/components/MdEditor/plugins/SavePlugin/index.module.scss
@@ -1,5 +1,10 @@
+@use '@/styles/variables' as var;
+
 .SavePluginContainer {
   display: flex !important;
   justify-content: center;
   align-items: center;
+  &:hover {
+    background: var.$plugin_hover_bg_color;
+  }
 }
