--- a/src/components/MdEditor/plugins/TitlePlugin/index.module.scss
+++ b/src/components/MdEditor/plugins/TitlePlugin/index.module.scss
@@ -1,6 +1,6 @@
 @use '@/styles/variables' as var;
 
-.ImagePluginContainer {
+.TitlePluginContainer {
   display: flex !important;
   justify-content: center;
   align-items: center;
