新增草稿、审核文章、文章等功能

--- a/src/components/Navigation/index.module.scss
+++ b/src/components/Navigation/index.module.scss
@@ -1,8 +1,11 @@
+@use '@/styles/variables' as var;
+
+
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: var.$nav-container-height;
   .nav-left{
     .logo{
       display: flex;
