--- a/src/components/CreatorSideBarLayout/index.module.scss
+++ b/src/components/CreatorSideBarLayout/index.module.scss
@@ -1,3 +1,4 @@
+@use '@/styles/variables' as var;
 .creatorSideBarLayout{
   width: 100%;
   height: 100%;
@@ -9,6 +10,7 @@
     width: 200px;
     position: relative;
     .sideBarContent{
+      height: calc(100vh - #{var.$nav-container-height} - 80px);
       width: 200px;
       background: #fff;
       position: fixed;
