--- a/src/components/CreatorSideBarLayout/index.module.scss
+++ b/src/components/CreatorSideBarLayout/index.module.scss
@@ -14,6 +14,10 @@
       width: 200px;
       background: #fff;
       position: fixed;
+      padding: 10px;
+      .createButton{
+        width: 100%;
+      }
     }
   }
   .content{
