--- a/src/app/login/index.module.scss
+++ b/src/app/login/index.module.scss
@@ -2,7 +2,8 @@
   display: inline-flex;
   width: 100%;
   height: 100vh;
-  background: url("./img/bg-login.jpg") 0 0 no-repeat;
+  //background: url("./img/bg-login.jpg") 0 0 no-repeat;
+  background: linear-gradient(to bottom, #87CEFA, #00FFCC);
   background-size: cover;
   .welcome {
 
