--- a/src/components/EditorHeader/index.module.scss
+++ b/src/components/EditorHeader/index.module.scss
@@ -1,10 +1,27 @@
+$editor-header-height: 50px;
+
 .editorHeaderContainer{
   display: flex;
   width: 100%;
+  height: $editor-header-height;
+  align-items: center;
+  padding: 0 10px;
   .title{
-    width: calc(100% - 200px);
+    flex: 1 1 auto;
+    input{
+      height: 50px;
+      font-size: 22px;
+      border: none;
+      box-shadow: none;
+    }
   }
   .tools{
-    width: 200px;
+    display: flex;
+    button{
+      margin-left: 10px;
+    }
+    img{
+      margin-left: 10px;
+    }
   }
 }
