--- a/src/components/ReactMarkdown/index.module.scss
+++ b/src/components/ReactMarkdown/index.module.scss
@@ -63,7 +63,7 @@ $font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   ol {
     margin-bottom: 1em;
     padding-left: 2em;
-
+    list-style-type: decimal; /* 使用数字作为序号 */
     li {
       margin-bottom: 0.5em;
     }
