有序列表与无序列表插件完成

--- a/src/app/profile/[userId]/index.module.scss
+++ b/src/app/profile/[userId]/index.module.scss
@@ -3,9 +3,11 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  height: 100%;
+  overflow: auto;
+  padding: 20px;
   .profile-content{
     width: calc(100% - 200px);
-    margin-top: 20px;
     .profile-description{
       width: 100%;
       background: #fff;
