卸载了原生插件，tabl插件样式优化

--- a/src/components/MdEditor/plugins/TablePlugin/index.module.scss
+++ b/src/components/MdEditor/plugins/TablePlugin/index.module.scss
@@ -13,6 +13,7 @@
   flex-wrap: wrap;
   width: calc(20 * 6px + 4 * 5px);
   position: relative;
+  cursor: pointer;
   .square{
     display: inline-block;
     background: #cdcdcf;
