点赞功能基本实现，优化了一下初次渲染接口请求逻辑

--- a/src/app/reader/[articleId]/index.module.scss
+++ b/src/app/reader/[articleId]/index.module.scss
@@ -10,8 +10,16 @@ $rightBarWidth: 260px;
   .operatorFix{
     position: fixed;
     width: $operatorWidth;
-    height: 300px;
     background: #fff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px 0;
+    .Button{
+      cursor: pointer;
+      font-size: 30px;
+      transition: 0.2s;
+    }
   }
   .readerContent {
     padding: 20px;
