--- a/src/app/profile/[userId]/index.module.scss
+++ b/src/app/profile/[userId]/index.module.scss
@@ -1,13 +1,14 @@
 .profile-container{
   width: 100%;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
   overflow: auto;
   padding: 20px;
   .profile-content{
     width: calc(100% - 200px);
+    min-width: 500px;
     .profile-description{
       width: 100%;
       background: #fff;
@@ -60,6 +61,7 @@
   }
   .articleList-container{
     width: calc(100% - 200px);
+    min-width: 500px;
     background: #fff;
     margin-top: 20px;
     .articleList-item{
