修改了profilemenu中的用户名展示，首页list的hover背景色

--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -13,7 +13,7 @@
       cursor: pointer;
       padding: 20px;
       &:hover{
-        background: #cccaca;
+        background: #f7f8fa;
       }
       .title{
         font-size: 28px;
