浏览记录的添加

--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -90,6 +90,7 @@ $leftBarWidth: 300px;
         }
       }
       .center{
+        font-size: 14px;
         margin-top: 10px;
         border-bottom: 1px solid #eee;
         padding-bottom: 10px;
