--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -49,6 +49,12 @@ $leftBarWidth: 300px;
               margin-left: 5px;
             }
           }
+          .look{
+            margin-left: 10px;
+            span{
+              margin-left: 5px;
+            }
+          }
         }
       }
     }
@@ -102,6 +108,11 @@ $leftBarWidth: 300px;
         .bottomItem{
           min-width: 40px;
           text-align: center;
+          font-size: 14px;
+          cursor: pointer;
+          &:hover{
+            color: #1e80ff;
+          }
         }
       }
     }
