--- a/src/app/reader/[articleId]/index.module.scss
+++ b/src/app/reader/[articleId]/index.module.scss
@@ -10,12 +10,19 @@ $rightBarWidth: 260px;
   .operatorFix{
     position: fixed;
     width: $operatorWidth;
-    background: #fff;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding: 10px 0;
     .Button{
+      background-color: #fff;
+      height: 44px;
+      width: 44px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
       cursor: pointer;
       font-size: 30px;
       transition: 0.2s;
@@ -79,7 +86,13 @@ $rightBarWidth: 260px;
     }
   }
   .outlineContent{
+    max-height: 0;
     overflow: auto;
     transition: 0.1s;
+  }
+  .outlineIsOpen{
+    max-height: 400px;
+    border-top: 1px solid #ccc;
+    padding: 10px 0;
   }
 }
