--- a/src/app/creator/home/index.module.scss
+++ b/src/app/creator/home/index.module.scss
@@ -56,5 +56,9 @@
       margin-top: 20px;
       width: 100%;
     }
+    .statisticCharts{
+      margin-top: 20px;
+      width: 100%;
+    }
   }
 }
