新增文章封面功能，把api中的表type统一到了sql文件夹下的type

--- a/src/components/EditorHeader/index.module.scss
+++ b/src/components/EditorHeader/index.module.scss
@@ -28,4 +28,8 @@ $editor-header-height: 70px;
 .publishContainer{
   display: inline-block;
   width: 400px;
+  .publishContainerBottom{
+    padding-top: 20px;
+    float: right;
+  }
 }
