--- a/src/components/ArticleItem/index.module.scss
+++ b/src/components/ArticleItem/index.module.scss
@@ -1,5 +1,5 @@
-$rightBarWidth: 40px;
-
+$coverWidth: 110px;
+$editWidth: 40px;
 
 .ArticleItemContainer{
   display: flex;
@@ -13,8 +13,6 @@ $rightBarWidth: 40px;
     background-color: #eee;
   }
   .leftBar{
-    flex: 1 1 auto;
-    max-width: calc(100% - #{$rightBarWidth});
     .title{
       font-size: 20px;
       overflow: hidden;
@@ -48,12 +46,28 @@ $rightBarWidth: 40px;
     }
   }
   .rightBar{
-    width: $rightBarWidth;
     display: flex;
     align-items: center;
-    cursor: pointer;
-    svg{
-      font-size: 40px;
+    .cover{
+      width: $coverWidth;
+      height: 74px;
+      margin-left: 10px;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
+        border-radius: 4px;
+        border: 1px solid rgba(228,230,235,0.5);
+        background: #fff;
+      }
+    }
+    .edit{
+      margin-left:10px;
+      cursor: pointer;
+      svg{
+        font-size: $editWidth;
+      }
     }
   }
 }
