--- a/src/components/Diagram/Nodes/FlowNode/index.module.scss
+++ b/src/components/Diagram/Nodes/FlowNode/index.module.scss
@@ -1,3 +1,14 @@
 .NodeContainer{
   border: 1px solid #8a919f;
+  min-height: 30px;
+  min-width: 30px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  .NodeInput{
+    width: 100%;
+    border: none;
+  }
 }
