--- a/src/components/Diagram/DiagramHeader/index.module.scss
+++ b/src/components/Diagram/DiagramHeader/index.module.scss
@@ -11,7 +11,13 @@ $ToolbarHeight: 40px;
     height: $ToolbarHeight;
     align-items: center;
     border: 1px solid #8a919f;
-    padding: 0 10px;
+    padding: 0 20px;
     justify-content: space-between;
+    .toolbarLeft{
+
+    }
+    .toolbarRight{
+
+    }
   }
 }
