新增加粗组件

--- a/src/components/Diagram/DiagramHeader/index.module.scss
+++ b/src/components/Diagram/DiagramHeader/index.module.scss
@@ -34,7 +34,9 @@ $ToolbarHeight: 40px;
     padding: 0 20px;
     justify-content: space-between;
     .toolbarLeft{
-
+      &>span{
+        margin-right: 4px;
+      }
     }
     .toolbarRight{
 
