新增颜色插件

--- a/src/components/Diagram/DiagramHeader/Plugins/PluginButton/index.module.scss
+++ b/src/components/Diagram/DiagramHeader/Plugins/PluginButton/index.module.scss
@@ -1,7 +1,10 @@
 .buttonContainer {
   font-size: 16px;
   cursor: pointer;
-  padding: 4px;
+  margin-right: 4px;
+  padding: 3px 6px;
+}
+.needHoverBg{
   &:hover {
     background: #dfe1e6;
   }
