--- a/src/components/Diagram/EdgeInput/index.module.scss
+++ b/src/components/Diagram/EdgeInput/index.module.scss
@@ -1,17 +1,12 @@
 .inputContainer{
-  display: flex;
-  width: 100%;
+  display: inline-flex;
   position: relative;
-  height: 100%;
-  min-width: 20px;
   .input{
     border: none;
     box-shadow: none !important;
     outline: none !important;
     resize: none !important;
-    position: absolute;
-    height: auto;
-    width: 100%;
+    min-width: 20px;
     text-align: center;
     background: transparent;
     overflow: hidden;
