--- a/src/components/Diagram/Nodes/FlowNode/index.module.scss
+++ b/src/components/Diagram/Nodes/FlowNode/index.module.scss
@@ -1,5 +1,5 @@
 .NodeContainer{
-  border: 1px solid #8a919f;
+  //border: 1px solid #8a919f;
   min-height: 30px;
   min-width: 30px;
   width: 100%;
